projects/storefrontstyles/scss/components/content/navigation/_navigation-ui.scss
%nav-wrapper {
  // create width of wrapper
  .wrapper[attr='1'] {
    width: 200px;
  }
  .wrapper[attr='2'] {
    width: 400px;
  }

  @include media-breakpoint-down(md) {
    .wrapper {
      height: 0;
      overflow: hidden;
    }
  }
}

%nav-back-button {
  &.flyout {
    .back {
      display: none;
    }
    @include media-breakpoint-down(md) {
      .back {
        display: initial;
        h5 {
          text-transform: capitalize;
          justify-content: flex-start;
          cx-icon {
            padding-right: 10px;
          }
        }
      }
      &:not(.is-open) {
        .back {
          display: none;
        }
      }
    }
  }
}

%nav-heading {
  h5 {
    margin: 0;
  }
  &.flyout {
    h5,
    cx-generic-link {
      display: flex;
      align-items: center;
      white-space: nowrap;

      color: currentColor;

      &:hover {
        color: var(--cx-g-color-primary);
      }

      @include media-breakpoint-up(lg) {
        padding: 5px 25px 5px 0;
        height: 35px;
      }
    }

    @include media-breakpoint-down(md) {
      // make all first level hedings uppercase in mobile view
      > nav {
        > h5,
        > cx-generic-link {
          text-transform: uppercase;
          font-weight: 600;
        }
      }
      h5,
      cx-generic-link {
        border-bottom: 1px solid var(--cx-g-color-light);
        display: flex;
        justify-content: space-between;

        cursor: pointer;
        a {
          display: block;
          width: 100%;
        }
      }

      h5,
      cx-generic-link a {
        padding: 1rem;
      }
    }

    @include media-breakpoint-up(lg) {
      > nav {
        cursor: pointer;
        // first level headings will be bold in desktop
        nav > h5 {
          @include type('5');
          cursor: default;
          &:hover {
            color: currentColor;
          }
        }
      }
    }
  }
}

%nav-icon {
  cx-icon {
    &:before {
      font-size: 1.5rem;
    }
  }
  @include media-breakpoint-up(lg) {
    cx-icon {
      padding: 0 0 0 10px;
      &:before {
        font-size: 1rem;
      }
    }
  }
}

%nav-childs {
  &.flyout {
    // the last level of navigations is tyically displayed in a column
    .childs[depth='1'] {
      flex-direction: column;
    }
    .childs {
      color: #000;
      @include media-breakpoint-up(lg) {
        padding: 20px;
        .childs {
          padding: 0;
        }
      }
    }
  }
}

%nav-links {
  a {
    color: currentColor;
  }
  &.flyout {
    a {
      display: block;
      text-decoration: none;
      white-space: nowrap;
    }
  }
}

%cx-navigation-ui {
  display: flex;

  @extend %nav-heading;
  @extend %nav-icon;
  @extend %nav-wrapper;
  @extend %nav-childs;
  @extend %nav-links;
  @extend %nav-back-button;

  nav {
    outline: none;
  }

  &.flyout {
    @include media-breakpoint-down(md) {
      flex-direction: column;
      color: #000;
    }

    @include media-breakpoint-down(md) {
      &.is-open {
        > nav {
          display: none;
        }
        nav.is-open {
          display: initial;
          > .wrapper {
            height: auto;
          }
        }

        nav.is-opened {
          display: initial;
          > .wrapper > .childs > nav {
            display: none;
            &.is-open {
              display: initial;
            }
          }
          > h5 {
            display: none;
          }
          > .wrapper {
            height: auto;
          }
        }
      }
    }

    @include media-breakpoint-up(lg) {
      > nav {
        > .wrapper {
          display: flex;
          position: absolute;
          visibility: hidden;
          opacity: 0;
          margin-left: -10px;
          z-index: 15;
          border: 1px solid #ccc;
        }

        /* we only threat the first wrapper as a collapsible container */
        &:hover,
        &:focus {
          > .wrapper {
            opacity: 1;
            visibility: visible;
          }
        }
      }

      .childs {
        display: flex;
        background: white;

        nav {
          padding-right: 20px;
        }
      }

      .wrapper cx-icon {
        display: none;
      }

      > nav {
        > .wrapper {
          transition: all 0.4s;
        }
      }
    }
  }
}

